--- a/list.html
+++ b/list.html
@@ -6,11 +6,9 @@
 			name="viewport"
 			content="width=device-width, initial-scale=1.0"
 		/>
-		<title></title>
+		<title>List</title>
 	</head>
 	<body>
-		<h1>Electron测试</h1>
-		<button id="btn">打开新窗口</button>
-		<script src="index.js"></script>
+		<h1>List</h1>
 	</body>
 </html>
