--- a/electron2/src/index.html
+++ b/electron2/src/index.html
@@ -15,6 +15,11 @@
 		<div id="readList">
 			<h1>读取的文件内容</h1>
 		</div>
+		<webview
+			id="webview"
+			src="https://www.baidu.com"
+			style="width: 640px; height: 480px"
+		></webview>
 		<script src="js/render.js"></script>
 	</body>
 </html>
